task_2/canary/deploy-canary.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: canary
  name: canary
spec:
  replicas: 1
  selector:
    matchLabels:
      app: canary
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: canary
    spec:
      containers:
      - image: nginx:latest
        name: nginx
        resources: {}
        volumeMounts:
          - name: config-nginx
            mountPath: /etc/nginx/conf.d
      volumes:
        - name: config-nginx
          configMap:
            name: nginx-configmap
status: {}
