task_2/canary/deploy-main.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: main
  name: main
spec:
  replicas: 1
  selector:
    matchLabels:
      app: main
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: main
    spec:
      containers:
      - image: nginx:latest
        name: nginx
        resources: {}
        volumeMounts:
          - name: config-nginx
            mountPath: /etc/nginx/conf.d
      volumes:
        - name: config-nginx
          configMap:
            name: nginx-configmap
status: {}
