task_2/canary/service-main.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: main
  name: main
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: main
status:
  loadBalancer: {}
